# django-tailwind

./: .gitignore  Dockerfile  README.md  base_copy.html  manage.py  pyproject.toml
api/: serializers.py  urls.py
book_graphql/: Readme.md
django_skeleton/: asgi.py  urls.py  wsgi.py
django_skeleton/settings/: allauth.py  base.py  env_vars.py
django_skeleton/settings/environments/: container.py  development.py  virtualmachine.py
django_tw/: __init__.py  asgi.py  constants.py  context_processors.py  forms.py  logger.py  sitemaps.py  tests.py  urls.py  utils.py  views.py  wsgi.py
django_tw/settings/: allauth.py  base.py  env_vars.py  rest.py
django_tw/settings/environments/: development.py  virtualmachine.py
locale/fr/LC_MESSAGES/: django.po
locale/zh_Hans/LC_MESSAGES/: django.po
profiles/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
scripts/: update_translation.sh
static/site/css/: menu.scss
static/site/js/: site.js
templates/: _brandname.html  _navbar.html  about.html  base.html  home.html  swagger.html
templates/account/: auth_base.html  login.html  signup.html
tenants/: urls.py
theme/static/css/: styles.css
theme/static_src/: package-lock.json  package.json
theme/static_src/src/: styles.css
